--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ a {
             </div>
             <div class="overflow-hidden" style="max-height: 45vh;">
               <div class="container px-5">
-                <img src="static/imgs/Dumbbell-training-in-gym-750x541.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="A person holding a dumbbell" width="700" height="500" loading="lazy">
+                <img src="Dumbbell-training-in-gym-750x541.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="A person holding a dumbbell" width="700" height="500" loading="lazy">
               </div>
               <p style="margin-right: 400px; font-size: 10px;">This photo is just an example, rights reserved to</p>
               <p style="margin-right: 499px; font-size: 10px;">https://fitnessvolt.com/</p>
@@ -111,21 +111,21 @@ a {
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
               <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                  <img src="static/imgs/weight.svg" alt="weight" height="60">
+                  <img src="weight.svg" alt="weight" height="60">
                 </div>
                 <h3 class="fs-2 text-body-emphasis">Quality and Variety of Equipment</h3>
                 <p>The gym should offer a wide range of high-quality equipment to cater to different types of workouts, including cardio machines, free weights, resistance machines, and functional training equipment. A well-equipped gym ensures that you can perform a diverse range of exercises to meet your fitness goals.</p>
               </div>
               <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                  <img src="static/imgs/images.png" alt="certified" height="60">
+                  <img src="images.png" alt="certified" height="60">
                 </div>
                 <h3 class="fs-2 text-body-emphasis">Trained and Supportive Staff</h3>
                 <p>Knowledgeable and friendly staff, including certified personal trainers and fitness instructors, can provide valuable guidance, create personalized workout plans, and offer support. Having access to expert advice can significantly enhance your fitness journey and help you achieve better results.</p>
               </div>
               <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                  <img src="static/imgs/sweep.png" alt="sweep" height="60">
+                  <img src="sweep.png" alt="sweep" height="60">
                 </div>
                 <h3 class="fs-2 text-body-emphasis">Cleanliness and Atmosphere</h3>
                 <p>A clean, well-maintained gym with a positive and motivating atmosphere is crucial. Cleanliness is essential for hygiene and comfort, while a welcoming environment can make your workouts more enjoyable and encourage consistency. Look for gyms that maintain high standards of cleanliness and foster a community vibe.</p>
